--- a/TypingSpeed.css
+++ b/TypingSpeed.css
@@ -3,41 +3,52 @@
   margin: 0;
   box-sizing: border-box;
   font-family: "Josefin Sans", sans-serif;
+  font-size: 12px;
 }
-html {
-  padding-top: 0px;
-}
+
 body {
-  margin: -200px;
-  transform: scale(0.65);
   background-color: black;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .main {
+  position: relative;
+  width: 100vw;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 10px solid rgba(0, 255, 255, 0.584);
-  box-shadow: 0 0 20px rgb(255, 0, 0);
-  padding: 4%;
+  border: 5px solid rgba(0, 255, 255, 0.584);
+  box-shadow: 0 0 15px rgb(255, 0, 0);
+  padding: 2%;
 }
 .title {
+  margin-top: 2%;
   color: rgb(54, 64, 101);
   color: aqua;
   text-shadow: 0 0 20px aqua;
-  font-size: 100px;
+  font-size: 2rem;
+  font-weight: 900;
 }
 .content {
-  text-align: center;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 #message {
-  padding: 50px;
+  width: 70%;
+  padding: 1%;
   color: rgb(197, 195, 195);
   background: #474747;
   font-family: "Kumbh Sans", sans-serif;
-  font-size: 80px;
+  font-size: 1.2rem;
   border-radius: 10px;
   font-weight: 900;
 }
@@ -45,24 +56,24 @@ body {
 #text {
   color: rgb(197, 195, 195);
   background: #474747;
-  font-size: 80px;
-  width: 95%;
+  font-size: 1.2rem;
+  width: 70%;
   resize: none;
   font-weight: 900;
   border-radius: 10px;
-  padding: 50px;
+  padding: 2%;
   font-family: "Kumbh Sans", sans-serif;
 }
 #resultInner {
-  font-size: 70px;
-  padding: 10px 70px;
+  font-size: 1rem;
+  padding: 10px;
   border: solid aqua;
 }
 #start-btn {
   font-weight: 900;
   margin-top: 20px;
   border-radius: 15px;
-  font-size: 80px;
+  font-size: 1.2rem;
   padding: 0.5% 3% 0.5% 3%;
   background: rgb(203, 203, 203);
 }
@@ -72,20 +83,72 @@ body {
 #modeChange {
   color: rgb(0, 0, 0);
   background: aqua;
-  position: absolute;
-  border: 10px solid aqua;
-  font-size: 65px;
-  font-weight: 900;
-  margin: 20px;
-  padding: 10px 20px;
-  border-radius: 20px;
+  font-size: 1.2rem;
+  font-weight: 700;
+  padding: 0.5% 0.5%;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
 }
 #modeChange:hover {
   cursor: pointer;
   transform: scale(1.01);
 }
 
-#disclaimer {
-  color: rgb(165, 165, 165);
-  font-size: 70px;
+.topnav {
+  position: absolute;
+  width: 90%;
+  top: 2%;
+  left: 2%;
+  display: flex;
+  justify-content: center;
+
+  justify-content: space-between;
+}
+#restart-btn {
+  font-weight: 900;
+  margin-top: 20px;
+  border-radius: 15px;
+  font-size: 1.2rem;
+  padding: 0.5rem 2rem;
+  background: rgb(203, 203, 203);
+  display: none;
+}
+#restart-btn:focus {
+  text-decoration: none;
+  transform: scale(1.05);
+}
+.restart-btnAtag {
+  text-decoration: none;
+}
+select {
+  color: rgb(251, 251, 251);
+  background: #000;
+  border: 2rem #000;
+}
+
+@media screen and (max-width: 480px) {
+  .title {
+    font-size: 5vw;
+  }
+  .content {
+    height: 60vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+  }
+  #message {
+    width: 90%;
+    padding: 5vw;
+  }
+  #start-btn {
+    font-size: 2rem;
+  }
+  #text {
+    width: 90%;
+  }
+  #restart-btn {
+    font-size: 2rem;
+  }
 }
