--- a/TypingSpeed.css
+++ b/TypingSpeed.css
@@ -122,6 +122,7 @@ body {
   text-decoration: none;
 }
 select {
+  font-size: 1.2rem;
   color: rgb(251, 251, 251);
   background: #000;
   border: 2rem #000;
